// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputFee should render 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-jSgupP hQfTbO"
      >
        <input
          class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="2"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-gKsewC bQJGRb"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-iBPRYJ ibPjga"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="2"
                  class="sc-fubCfw jsLCzd"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee if value property changes 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-jSgupP hQfTbO"
      >
        <input
          class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="1"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-gKsewC bQJGRb"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-iBPRYJ ibPjga"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="sc-fubCfw jsLCzd"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on avg 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-jSgupP hQfTbO"
      >
        <input
          class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="1.355"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-gKsewC bQJGRb"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-iBPRYJ ibPjga"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1.355"
                  class="sc-fubCfw jsLCzd"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="true"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on max 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-jSgupP hQfTbO"
      >
        <input
          class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="10"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-gKsewC bQJGRb"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-iBPRYJ ibPjga"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="10"
                  class="sc-fubCfw jsLCzd"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="true"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputFee should update fee when clicking on min 1`] = `
<DocumentFragment>
  <div
    class="flex space-x-2"
    data-testid="InputFee"
  >
    <div
      class="flex-1"
    >
      <div
        class="sc-jSgupP hQfTbO"
      >
        <input
          class="sc-bdfBwQ fPlpOa overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-400 dark:border-theme-neutral-700 text-theme-text transition-colors duration-200 px-4 py-3 "
          data-testid="InputCurrency"
          type="text"
          value="1"
        />
        <div
          class="absolute bottom-0 px-1 w-full"
        >
          <div
            class="flex flex-wrap justify-center"
            data-testid="Range"
          >
            <div
              class="sc-gKsewC bQJGRb"
              data-testid="Range__track"
              style="transform: scale(1); cursor: pointer;"
            >
              <div
                class="sc-iBPRYJ ibPjga"
                data-testid="Range__track__filled"
              >
                <div
                  aria-valuemax="10"
                  aria-valuemin="1"
                  aria-valuenow="1"
                  class="sc-fubCfw jsLCzd"
                  data-testid="Range__thumb"
                  draggable="false"
                  role="slider"
                  style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                  tabindex="0"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="inline-flex overflow-hidden flex-shrink-0 items-center rounded border border-theme-neutral-300 dark:border-theme-neutral-800"
        data-testid="SelectionBar"
        role="radiogroup"
      >
        <button
          aria-checked="true"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Min
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Average
        </button>
        <button
          aria-checked="false"
          class="sc-pFZIQ dRCmcT relative px-5 border-transparent transition-colors duration-300 focus:outline-none border-b-3"
          data-testid="SelectionBarOption"
          role="radio"
          type="button"
        >
          Max
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
